# barista

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  barista.bat  pyproject.toml
.github/workflows/: ci.yml
barista/: __init__.py  __main__.py  ble.py  cli.py  dbus_ecam.py  protocol.py  scheduler.py  server.py
barista/ui/: index.html
docs/: PROTOCOL.md
scripts/: pi-setup.sh
tests/: test_ble.py  test_protocol.py  test_server.py
